public/global.css
html {
	position: relative;
	height: 100%;
	font-family: 'IBM Plex Mono Medium', monospace;
	background-color: #FFE2BD;
    color: #2e4756;
    transform-origin: top left;
    --scale: 1;
    transform: scale(var(--scale));
    margin: 0;
}

@media screen and (min-width: 750px) {
    html {
        margin-left: calc((100vw - 100%) / var(--scale));
        padding: 0 !important;
    }
}

body {
	max-width: 650px;
	min-width: 425px;
	margin: 0 auto;
	padding: 24px 24px 0 24px;
	display: grid;
    row-gap: 16px;
    overflow-x: hidden;
}

a {
	color: inherit;
	font-weight: bolder;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
	margin: 1em 0;
}

th, td {
	text-align: left;
	vertical-align: top;
	border: 1px solid;
	padding: 0.4em
}

thead, tfoot, pre, blockquote {
	background: #e5cbaa;
}

pre, blockquote {
	padding: 12px;
}

hr {
	border:0;
	border-bottom: 1px solid #2e4756;
}

@font-face {
    font-family: 'IBM Plex Mono Medium';
    src: url('ibmplexmono-medium-webfont.woff2') format('woff2'),
         url('ibmplexmono-medium-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

